--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -442,20 +442,27 @@ SIGNPOST MORE TO CH.6?
 
 The role of playtesting is explored in relation to he use of GDPs in Chapter in part through a lens of increasing fluency.  
 
-
-
 FLOW SOCIAL
 CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6.
 
+PLAYFUL PLAYTESTING?
+
+
+**Playful playtesting and maker types:**
+
+My journal notes on playtesting behaviour, later confirmed by video and interview data, detail observations on emerging variety in the activities and modes of interaction. Patterns include: playtesting behaviours that helped form social connections (often adopted by parents), playful bordering on raucous clusters of young poeple [see playful.playtesting], more sneaky behaviour in designing against game conventions,  
+
+SUMMARY
+
 To advance the potential of playtesing interactions, in P3, began to intervene gently but strategically to nurture these emergent practices of social coding and mutual aid.
 
-PLAYFUL PLAYTESTING?
 
 ##### Use of side missions to encourage varied creative practices
 
-CROSS REFERENCE THIS WITH APPENDIX AND CHAPTER 7 - IDENTITIES IN PARTICULAR
+CROSS REFERENCE THIS WITH AP
+PENDIX AND CHAPTER 7 - IDENTITIES IN PARTICULAR
 
-In P3, I introduced a light narrative framework to scaffold participant engagement. This took the form of a fictional scenario in which an alien contacted the group and asked for games to assess the worth of the human race (see Vignette 5.alien). Within this scenario, participants were assigned printed side missions — some social and some secret — that encouraged interaction, exploration, and humour. These missions often involved behaviours not directly related to game creation, such as observing others’ games or making subtle, playful changes to someone else’s project.
+In P3, I introduced a narrative framework to scaffold participant engagement in the form of a fictional scenario in which an alien civilisation contacted the group and demanding participants upload games to allow the aliens to assess the worth of the human race [^ds]. Within this scenario, participants were assigned printed side missions [^sidem], some public and some some secret, that encouraged interaction, exploration, and humour. These missions often involved social behaviours not directly related to game creation, that correlated to different approaches I had observed emerging organically in the play testing periods of P2. Examples of these missions are included in the extract in Table 5.sidemissions.
 
 | **Your Alien Mission (social)** | **Your Secret Alien Mission** |
 |--------------------------------|-------------------------------|
@@ -734,6 +741,10 @@ Gilbert is the worsted name.
 
 
 [^20]: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
+
+[^ds]: The drama scenario was based on the techniques of undertaking a process within drama which I had explored in previous work with Manchester Met Drama education department [@patterson]. See Appendix D.? for more information. And literature on Mantle of the Expert (website)
+
+[^sidem]: Side missions or side quests are a concept from video games involving exploration. They complement main missions and offer greater choice over player experience.
 
 [^ld]: The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices.
 
