new image - c3 tension

--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -389,11 +389,11 @@ In my journal, I noted that group work at this stage felt disjointed with non-co
 These reflection show two strands of tension between activity system elements.  
 One tension is between the object of working together and the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects.
 
-Another tension concerned division of labour. To participate fully in later design stages, participants would need to engage with text-based code regardless of their previous (and perhaps preferred) working practices.  In addition,  given that coding activities were on going by others attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.
+Another tension concerned division of labour. To participate fully in later design stages, participants would need to engage with text-based code regardless of their previous (and perhaps preferred) working practices. In addition,  given that coding activities were on going by others attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.
 
-These tensions combined with previously explored cultural barriers to coding to explose a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999]. The accumulated contradiction is illustrated in Figure 5.x.
+These tensions combined with previously explored cultural barriers to coding to expose a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999]. The accumulated contradiction is illustrated in Figure 5.x.
 
-![](./Pictures/At_tension_2_v2.png){width=95%}
+![](./Pictures/At_tension_2_v3.png){width=95%}
 
 Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity - CHANGE TO A CONTRADICTION BETWEEN  CULTURAL LAYER AND OBJECT
 
@@ -418,10 +418,9 @@ The following design interventions were introduced in P2 and P3 to respond to th
 
 ##### Social coding processes via playtesting
 
-WHERE ELSE IS PLAYTESTING COVERED? HOW TO LINK -
+<!-- WHERE ELSE IS PLAYTESTING COVERED? HOW TO LINK -
  - BACK INTO CHAPTER 2? VIA REPENNING? FLOW SOCIAL
- CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6.
-
+ CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6. -->
 
 The structural changes of starting template meant that players starting with a game in a working state. Thus if changes were carried out in small iterations each change could be self-tested and shared with others via group / social playtesting. This increased the time participants spent playtesting both their own and others’ games dramatically. The process of playtesting became increasingly significant in P2 in a way which transcended an instrumental design process of revision. It took on important social and cultural value.
 
@@ -429,27 +428,19 @@ By the middle of P2, playtesting had evolved into a key site of peer exchange, p
 
 Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 2). While this frustration was natural for participants blocked in progression, I also felt urgency in my response. In response, I prioritised support to participants with games in a broken stage to make them and playable again so that they did not miss out the valuable experience of social playtesting.
 
-The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013], however the structure of the design varies that of SDG considerably.
-Whereas in SDG, X, HERE Y. 
+The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013] [^pf], however the structure of the design varies that of SDG considerably. Whereas in SDG, X, HERE Y.
 
-<!--
-FOOT NOTE - FROM CH2.
-In SGD the concept of proximal flow links flow theory and the vital importance of engagement, via scaffolding to the ZPD and the social and environmental nature of that support [@basawapatna_zones_2013].   -->
-
-<!-- , and these moments became triggers for collaboration.  -->
 
 SIGNPOST MORE TO CH.6?
 
 The role of playtesting is explored in relation to he use of GDPs in Chapter in part through a lens of increasing fluency.  
 
-
-
-FLOW SOCIAL
+FLOW SOCIAL - PLAYFUL PLAYTESTING?
 CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6.
 
 To advance the potential of playtesing interactions, in P3, began to intervene gently but strategically to nurture these emergent practices of social coding and mutual aid.
 
-PLAYFUL PLAYTESTING?
+
 
 ##### Use of side missions to encourage varied creative practices
 
@@ -467,12 +458,6 @@ In P3, I introduced a light narrative framework to scaffold participant engageme
 
 The side missions were designed to support playful social dynamics and to foster a sense of shared community. By encouraging participants to engage with others’ work in imaginative ways, they helped shift the focus away from individual technical mastery and towards relational creativity. In line with third-generation activity theory, these missions acted as secondary stimuli that restructured the activity context and opened up new pathways for agency development. They positioned observation, playfulness, and curiosity as legitimate ways of participating, helping to validate roles beyond that of the coder.
 
-**Narrative drama process - NEEDED OR NOT?**
-
-In P2 these missions were given as a stand alone extra activity. (WERE THEY?)
-
-In P3 they were wrapped around a narrative.
-
 
 <!-- #### SUMMARY AND LINK
 
@@ -482,11 +467,14 @@ A more detailed exploration of the development of participant agency in relation
 
 #### Brief Analysis
 
-While this section presents only a partial account of the missions and the drama-based approach [footnote & appendix ], their inclusion in the design was a response to the contradictions described above. A more detailed exploration of how these elements contributed to the development of agency is provided in Chapter 7. Within the broader CHAT–DBR framework of this thesis, these missions can be understood as design artefacts that mediated both cultural and affective engagement, making space for diverse learners to see themselves as legitimate part
 
-MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth,
+Within the broader CHAT–DBR framework of this thesis, these missions can be understood as design artefacts that mediated both cultural and affective engagement, making space for diverse learners to see themselves as legitimate part
 
-<!-- #### What's missing and why - a map of learning dimensions -->
+While this section presents only a partial account of the missions and the drama-based approach [footnote & appendix ], their inclusion in the design was a response to the contradictions described above.
+
+
+MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth and contains a more detailed exploration of how these elements contributed to the development of agency is provided.  
+
 NOT SURE WHERE TO PLACE THIS EXACTLY? LATER?
 This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices. This is not to say that these concepts are not suitable for appropriation via participation in these activities. In Chapter 6, I present a framework of concepts that suit exploration via these game making activities as a proposed map of learning dimensions [^ld]. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
 
@@ -714,6 +702,8 @@ Gilbert is the worsted name.
 
 
 [^20]: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
+
+[^pf]: In SGD the concept of proximal flow links flow theory and social engagement within the learning  [@basawapatna_zones_2013].
 
 [^ld]: The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices.
 
