--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -154,7 +154,7 @@ These tensions reveal an underlying contradiction in the activity system between
 
 #### Design response
 
-The first response to this conflict was a non-technical one. After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [14]. I asked parents for support in organising and bringing more order to group and planning processes. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed freeing up more of my time to support technical issues in the remaining sessions.
+The first response to this conflict was a non-technical one. After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [^14]. I asked parents for support in organising and bringing more order to group and planning processes. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed freeing up more of my time to support technical issues in the remaining sessions.
 
 In addition, these tensions outlined above shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a **starter game template** with greater scaffolding including putting key variables at the start of the game code, and embedding comments in the code highlighting lines intended for modification.
 
@@ -694,7 +694,7 @@ Gilbert is the worsted name.
 
 [^34]: In SGD the concept of proximal flow links flow theory and social engagement within the learning  [@basawapatna_zones_2013].
 
-[^35]: The drama scenario was based on the techniques of undertaking a process within drama which I had explored in previous work with Manchester Met Drama education department [@patterson]. See Appendix D.? for more information. And literature on Mantle of the Expert (website)
+[^35]: The drama scenario was based on the techniques of undertaking a process within drama which I had explored in previous work with Manchester Met Drama education department [@caldwell_drama_2019]. See Appendix D.? for more information. And literature on Mantle of the Expert (website)
 
 [^36]: Side missions or side quests are a concept from video games involving exploration. They complement main missions and offer greater choice over player experience.
 
@@ -702,10 +702,10 @@ Gilbert is the worsted name.
 [^37]: The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices.
 
 
-[^38: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
+[^38]: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
 
 
-[^39] These design heuristics present in decisions made in creating microworld environments, the development of Scratch software, and constructionist gaming research include: principles of low floors, wide walls, high ceilings, open windows and choosing black boxes carefully (see Chapter 2 for a summary).
+[^39]: These design heuristics present in decisions made in creating microworld environments, the development of Scratch software, and constructionist gaming research include: principles of low floors, wide walls, high ceilings, open windows and choosing black boxes carefully (see Chapter 2 for a summary).
 
 [^40]:Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships.
 
