move an intro chunk

--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -60,15 +60,18 @@ title: 5. Findings - Design Narrative
 
 ## Chapter introduction
 
-This chapter presents a design narrative that traces the evolution of the learning environment developed in this research, focusing on how the design responded to emergent tensions across different phases of implementation. The narrative approach adopted here is informed by design-based reabove search (DBR) traditions and supported by the analytical tools of third-generation activity theory (3GAT), as outlined in Chapter 3. Through this framing, the chapter aims to demonstrate how changes in tools, documentation, and pedagogical strategies were shaped by iterative analysis of contradictions and participant need.
+This chapter presents a design narrative that traces the evolution of the learning environment developed in this research across different phases of implementation. The narrative approach adopted here is informed by design-based research (DBR) traditions and the analytical tools of third-generation activity theory (3GAT), as outlined in Chapter 3. This
+chapter demonstrate how changes in tools, documentation, and pedagogical strategies were shaped by participant need during phases 1 to 3 of the research [foot - as explained in Ch.4].
 
-Design narratives are particularly useful in DBR for describing situated, context-sensitive changes to an intervention over time [@hoadley_creating_2002-1; @bell_theoretical_2004]. Here, the narrative is grounded in the concrete details of the research setting and practices, and attends closely to how formative redesigns emerged in response to barriers encountered by participants. The approach is also underpinned by an argumentative grammar that draws together key concepts from DBR and CHAT: iterative cycles of transformation, the surfacing of tensions between systemic elements, the role of secondary stimuli and affordances in mediating participant agency, and the developmental process of rising to the concrete through exploration of a germ cell.
+Design narratives are a useful DBR technique for describing situated, context-sensitive changes to an intervention over time [@hoadley_creating_2002-1; @bell_theoretical_2004]. Here, the narrative is grounded in the concrete details of the research setting and practices, and attends closely to how formative redesigns emerged in response to barriers encountered by participants.
 
-The chapter begins with a situated vignette that introduces the activity and its participants at a particular moment in Phase 2 (P2), drawing attention to layered systems of activity and to the shifting object of the intervention. This is followed by three major sections, each focused on a cluster of contradictions identified during the analysis. These cover tensions related to technical tools and accessibility, issues of navigation and documentation, and cultural or identity-based challenges in the coding process. Each section presents a sequence of problem identification, design response, and analysis of outcome or change, drawing on session notes, participant feedback, artefact analysis, and observations from the researcher’s journal.
+The chapter begins with  It continues with a situated vignette that introduces the activity and its participants in the latter stages of Phase 2 (P2), drawing attention to nested systems of activity and to a framing of use of GDPs as a germ cell / unit of analysis within AT as a theoretical framework. This is followed by three major sections, each focused on a cluster of contradictions identified during the analysis. These cover tensions related to technical tools and accessibility, issues of navigation and documentation, and cultural or identity-based challenges in the coding process. Each section presents a sequence of problem identification, design response, and analysis of outcome or change, drawing on session notes, participant feedback, artefact analysis, and observations from the researcher’s journal.
 
-A key outcome of the design process was the introduction and later development of gameplay design patterns (GDPs) as both a practical scaffold and a conceptual structuring tool. Emerging first as a response to contradictions in Phase 1, GDPs became increasingly central to the learning design and the coordination of documentation, gameplay, and peer support practices. This chapter begins to trace their role in structuring agency and framing activity, positioning them as a germ cell concept within the intervention. Their varied use by participants, and their role in shaping trajectories of action and interaction, are taken up in greater detail in Chapter 6, which draws on video data and transcript analysis.
+While Hoadley [-@hoadley_creating_2002] covers motivations of design narratives, there are not set forms . My  design narrative, is an additive blend of contextual information, facilitator reflections, design changes and interwoven vignettes drawn from close observations of video data.  
 
-By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological and theoretical project of the thesis: to understand how participatory, tool-mediated environments can be iteratively developed through a synthesis of CHAT and DBR. It also begins the task of articulating the design heuristics that emerged from this process, which are revisited and synthesised in later chapters.
+By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological project of the thesis: to develop a participatory, tool-mediated environment informed by a synthesis of CHAT and DBR processes. The narrative also begins the task of articulating the emerging design heuristics.
+
+
 
 
 ## Vignette and activity system analysis
@@ -105,6 +108,16 @@ I HAVE DROPED THE IMAGE - I DESCRIBED IN MUCH MORE DETAILS IN THE CHAPTER - I SH
 ![Figure 5.feature - Mid-level activity system of game making: constructing a game feature by feature](./Pictures/At_dia_2_v3.png){width=95%} -->
 
 The significance of activity at this scope underpins my proposal of GDPs as a germ cell concept within the theoretical framework of the thesis. At this level, the object of activity is more concrete. Participants are focused on implementing or adapting a design pattern in their own game. This allows for analytical clarity and supports the argument that GDPs served not only as pedagogical scaffolds but also as conceptual anchors for the intervention's iterative development.
+
+
+### Framing of GDPs as a germ cell concept - JUST MOVED HERE
+
+The approach of this chapter underpinned by an argumentative grammar that draws together key concepts from DBR and CHAT: iterative cycles of transformation, the surfacing of tensions between systemic elements, the role of secondary stimuli and affordances in mediating participant agency, and the developmental process of rising to the concrete through exploration of a germ cell.
+
+
+A key outcome of the design process was the introduction and later development of gameplay design patterns (GDPs) as both a practical scaffold and a conceptual structuring tool. Emerging first as a response to contradictions in Phase 1, GDPs became increasingly central to the learning design and the coordination of documentation, gameplay, and peer support practices. This chapter begins to trace their role in structuring agency and framing activity, positioning them as a germ cell concept within the intervention. Their varied use by participants, and their role in shaping trajectories of action and interaction, are taken up in greater detail in Chapter 6, which draws on video data and transcript analysis.
+
+
 
 <!-- Integrate LATER
 Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen undertaking chains of processes in a fluid way, indicating that these actions had become operations. The following sections extend this analysis by exploring three core areas of contradiction that shaped the evolving learning design. -->
@@ -283,7 +296,7 @@ This contradiction appeared to be a double bind [@Engeström], how could I provi
 <!-- INTERGRATE?
 In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support. -->
 
-Recalling my organisational crisis in P1 outlined in the section above, in response to my email asking for help, parents made suggestions including: use of a visible and shared list of game features that are being worked on, and documentation to support the implementation their requirements. The suggestion of the list of game features used as both an shared organisational tool, became relevant in addressing the contradiction outlined above.
+Recalling my organisational crisis in P1 outlined in the section above, in response to my email asking for help, parents made suggestions including: use of a visible and shared list of game features that are being worked on, and documentation to support the implementation of code which explained underlying principles and foundational code structures. The suggestion of the list of game features used as both an shared organisational tool, became relevant in addressing the contradiction outlined above.
 
 Early in P2 I returned to this concept to begin  design and implementation of supporting resources oriented around a list of game features which users could choose from allowing them take on features in the order that they chose.
 
@@ -564,6 +577,8 @@ Harbour walls prevent large waves from entering but also provide gaps allowing m
 
 This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT.
 
+IT'S BEEN SO EXTENSIVE WE COULD REFER TO IT AS A DESIGN VOYAGE!
+
 Table 5.2 shows a summary of some of the tensions and design resolutions that emerged from the process.
 
 INSERT TABLE OF THE DESIGN FACTORS.
@@ -617,7 +632,6 @@ The structure of documentation, created in response to participant requests for 
 <!-- LINK  -->
 
 Gilbert is the worsted name.
-
 
 ## Footnotes
 
